--- a/Backend/public/css/common.css
+++ b/Backend/public/css/common.css
@@ -4,6 +4,34 @@
     font-family: 'Rubik', sans-serif;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
+    max-width: 300px;
+    width: 100%;
+    z-index: 30;
+}
+
+.popup-content {
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
 .sticky {
     position: sticky;
     top: 0;
