--- a/Backend/public/css/renderNow.css
+++ b/Backend/public/css/renderNow.css
@@ -14,6 +14,45 @@ label {
 
 #fileInput {
     display: block;
-    
+
 }
 
+#fileListPopup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: black;
+    color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    max-height: 50vh;
+    overflow-y: auto;
+    border-radius: 10px;
+}
+
+#fileListPopup::-webkit-scrollbar {
+    width: 12px; /* Set the width of the scrollbar */
+  }
+
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+#fileList button {
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    background: none;
+}
+
+#fileList button:hover {
+    background-color: #c82333;
+    border-radius: 20px;
+    /* Darker red on hover */
+}
