--- a/Backend/public/css/common.css
+++ b/Backend/public/css/common.css
@@ -95,10 +95,20 @@
     color: white;
 }
 
+/* .footer {
+    background-color: #e80cc0;
+    color: white;
+} */
+
 .footer {
     background-color: #e80cc0;
     color: white;
-}
+    /* padding: 10px; */
+    /* text-align: center; */
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
 
 @media (max-width: 800px) {
     body {
